# mailing

./: README.md  grading.py  mailing.py  requirements.txt  setup.cfg  splitpdf.sh
mailing/: action.py  mailing.py
mailing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: mycontacts.csv  mycontacts_bar.csv  mycontacts_reversed.csv  mycontacts_semicolon.csv  mycontacts_separated.csv  mycontacts_tab.csv  myfolder_mailing.csv  myfolder_output.csv
