[metadata]
name = mailing
version = 0.0.3
aruthor= Fernando Muro
author_email = fmuro@us.es
description = mail PDF files to a list of people with names resemling the file names
license = GPL-3.0

[options]
packages = mailing
install_requires =
    libmatching @ git+https://github.com/FMuro/libmatching.git#egg=libmatching

[options.entry_points]
console_scripts =
    mailing = mailing.mailing:funcion

[options.package_data]
mailing = *