[metadata]
name = mailing
version = 0.0.3
aruthor= Fernando Muro
author_email = fmuro@us.es
description = mail PDF files to a list of people with names resemling the file names
license = GPL-3.0

[options]
packages = mailing
install_requires =
    matching @ git+https://github.com/FMuro/matching.git#egg=matching

[options.entry_points]
console_scripts =
    mailing = mailing.action:funcion

[options.package_data]
mailing = *